remove: apps/portal/vercel.json

--- a/package.json
+++ b/package.json
@@ -1,21 +1,13 @@
 {
   "name": "patternlens-ecosystem",
   "private": true,
-  "packageManager": "pnpm@9.15.0",
   "scripts": {
-    "dev": "turbo dev",
-    "build": "turbo build",
-    "lint": "turbo lint",
-    "test": "vitest",
-    "clean": "turbo clean && rm -rf node_modules"
+    "dev": "cd apps/portal && pnpm dev",
+    "build": "cd apps/portal && pnpm build"
   },
   "devDependencies": {
-    "@types/node": "^22.0.0",
-    "@types/react": "^19.0.0",
-    "tailwindcss": "^4.0.0",
-    "turbo": "^2.3.0",
-    "typescript": "^5.7.0",
-    "vitest": "^2.1.0",
-    "eslint": "^9.0.0"
+    "@types/node": "^22",
+    "@types/react": "^19",
+    "typescript": "^5"
   }
 }
