--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,6 @@
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "framework": "nextjs",
   "installCommand": "pnpm install",
-  "buildCommand": "cd apps/portal && next build",
+  "buildCommand": "pnpm --filter=portal build",
   "outputDirectory": "apps/portal/.next"
 }
